Add Bubble Trouble feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -201,3 +201,7 @@ Resources:
         # Built by Fidelity
         - { Type: A, Name: !Sub "pf9382bbfd.${Domain}", AliasTarget: { DNSName: "d39u26z25y1es1.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf9382bbfd.${Domain}", AliasTarget: { DNSName: "d39u26z25y1es1.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Bubble Trouble
+        - { Type: A, Name: !Sub "pf1022mnbt.${Domain}", AliasTarget: { DNSName: "doy3l2ymgon88.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf1022mnbt.${Domain}", AliasTarget: { DNSName: "doy3l2ymgon88.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
