--- a/etc/cloudwatch-data-sharing-org-list-role.yml
+++ b/etc/cloudwatch-data-sharing-org-list-role.yml
@@ -3,8 +3,8 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   Creates a IAM role with the special name
   CloudWatch-CrossAccountSharing-ListAccountsRole, which CloudWatch uses for
-  cross-account console functionality. This stack should launched only in the
-  Organization's management account.
+  cross-account console functionality. This stack be should launched only in
+  the Organization's management account.
 
 Parameters:
   MonitoringAccountIds:
