--- a/devops/aws-management/devops-cross-account-access-role.yml
+++ b/devops/aws-management/devops-cross-account-access-role.yml
@@ -125,11 +125,10 @@ Resources:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-          - Action:
-              - sts:AssumeRole
+          - Action: sts:AssumeRole
             Condition:
               StringEquals:
-                "aws:PrincipalOrgID": !Ref OrganizationId
+                aws:PrincipalOrgID: !Ref OrganizationId
             Effect: Allow
             Principal:
               AWS: "*"
