Deploy OIDC role from management pipeline

--- a/devops/github/oidc-role.yml
+++ b/devops/github/oidc-role.yml
@@ -20,6 +20,7 @@ Resources:
           - Action: sts:AssumeRoleWithWebIdentity
             Condition:
               StringLike:
+                # Allows only actions in this repository to assume the role
                 token.actions.githubusercontent.com:sub: !Sub repo:${FullRepoName}:*
             Effect: Allow
             Principal:
