--- a/devops/aws-management/cd/template.yml
+++ b/devops/aws-management/cd/template.yml
@@ -139,6 +139,7 @@ Resources:
                   - !GetAtt CloudWatchSharingListAccountsRoleStackCloudFormationRole.Arn
                   - !GetAtt OrganizationDataSharingRoleStackCloudFormationRole.Arn
                   - !GetAtt OrganizationCloudTrailStackCloudFormationRole.Arn
+                  - !GetAtt GitHubOidcRoleStackCloudFormationRole.Arn
             Version: "2012-10-17"
           PolicyName: IamPassRole
       Tags:
@@ -288,6 +289,23 @@ Resources:
                 RoleArn: !GetAtt OrganizationCloudTrailStackCloudFormationRole.Arn
                 StackName: organization-trail
                 TemplatePath: InfrastructureRepoSourceArtifact::devops/aws-management/organization-trail.yml
+              InputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+              RunOrder: 1
+            # DevOps-GitHubOidcFederatedRole IAM role
+            - Name: GitHubOidcRole
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: "1"
+              Configuration:
+                ActionMode: CREATE_UPDATE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                ChangeSetName: !Sub ${AWS::StackName}GitHubOidcRole
+                RoleArn: !GetAtt GitHubOidcRoleStackCloudFormationRole.Arn
+                StackName: !Sub ${AWS::StackName}-github-oidc-role
+                TemplatePath: InfrastructureRepoSourceArtifact::devops/github/oidc-role.yml
               InputArtifacts:
                 - Name: InfrastructureRepoSourceArtifact
               RunOrder: 1
@@ -529,6 +547,57 @@ Resources:
                   - iam:Tag*
                   - iam:Untag*
                   - iam:UpdateAssumeRolePolicy
+                  - iam:UpdateRole
+                  - iam:UpdateRoleDescription
+                Resource: "*"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+  GitHubOidcRoleStackCloudFormationRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - cloudformation.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Policies:
+        - PolicyName: ResourceManipulationPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - iam:AddClientIDToOpenIDConnectProvider
+                  - iam:AttachRolePolicy
+                  - iam:CreateOpenIDConnectProvider
+                  - iam:CreatePolicy
+                  - iam:CreatePolicyVersion
+                  - iam:CreateRole
+                  - iam:DeleteOpenIDConnectProvider
+                  - iam:DeletePolicy
+                  - iam:DeletePolicyVersion
+                  - iam:DeleteRole
+                  - iam:DeleteRolePolicy
+                  - iam:DeleteRolePolicy
+                  - iam:DetachRolePolicy
+                  - iam:Get*
+                  - iam:List*
+                  - iam:PutRolePolicy
+                  - iam:RemoveClientIDFromOpenIDConnectProvider
+                  - iam:SetDefaultPolicyVersion
+                  - iam:Tag*
+                  - iam:Untag*
+                  - iam:UpdateAssumeRolePolicy
+                  - iam:UpdateOpenIDConnectProviderThumbprint
                   - iam:UpdateRole
                   - iam:UpdateRoleDescription
                 Resource: "*"
