Add tasks to Fargate task runs

--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -697,6 +697,11 @@ Resources:
           SECURITY_GROUP_3: !Ref KmsEndpointAccessSecurityGroupId
           MAX_FARGATES: "2"
           STARTED_BY: !Ref AWS::StackName
+          ENVIRONMENT_TYPE: !Ref EnvironmentType
+          ROOT_STACK_ID: !Ref RootStackId
+          ROOT_STACK_NAMAE: !Ref RootStackName
+          STACK_ID: !Ref AWS::StackName
+          STACK_NAMAE: !Ref AWS::StackId
       Events:
         SqsMessages:
           Type: SQS
@@ -733,6 +738,16 @@ Resources:
           platformVersion: '1.4.0',
           startedBy: STARTED_BY,
           taskDefinition: process.env.ECS_TASK_DEFINITION_ARN,
+          tags: [
+            { Key: "prx:meta:tagging-version", Value: "2021-04-07" },
+            { Key: "prx:cloudformation:stack-name", Value: process.env.STACK_NAME },
+            { Key: "prx:cloudformation:stack-id", Value: process.env.STACK_ID },
+            { Key: "prx:cloudformation:root-stack-name", Value: process.env.ROOT_STACK_NAME },
+            { Key: "prx:cloudformation:root-stack-id", Value: process.env.ROOT_STACK_ID },
+            { Key: "prx:ops:environment", Value: process.env.ENVIRONMENT_TYPE },
+            { Key: "prx:dev:family", Value: "Dovetail" },
+            { Key: "prx:dev:application", Value: "Augury" },
+          ],
         };
 
         // lightweight json logger
