--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -699,9 +699,9 @@ Resources:
           STARTED_BY: !Ref AWS::StackName
           ENVIRONMENT_TYPE: !Ref EnvironmentType
           ROOT_STACK_ID: !Ref RootStackId
-          ROOT_STACK_NAMAE: !Ref RootStackName
+          ROOT_STACK_NAME: !Ref RootStackName
           STACK_ID: !Ref AWS::StackName
-          STACK_NAMAE: !Ref AWS::StackId
+          STACK_NAME: !Ref AWS::StackId
       Events:
         SqsMessages:
           Type: SQS
