--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -91,15 +91,15 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${AnalyticsBigqueryFunction}
       RetentionInDays: 14
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Analytics }
+      # Tags:
+      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+      #   - { Key: prx:dev:family, Value: Dovetail }
+      #   - { Key: prx:dev:application, Value: Analytics }
   AnalyticsBigqueryFunctionElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
@@ -384,15 +384,15 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${AnalyticsDynamoDbFunction}
       RetentionInDays: 14
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Analytics }
+      # Tags:
+      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+      #   - { Key: prx:dev:family, Value: Dovetail }
+      #   - { Key: prx:dev:application, Value: Analytics }
   AnalyticsDynamoDbFunctionElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
@@ -651,15 +651,15 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${AnalyticsPingbacksFunction}
       RetentionInDays: 14
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Analytics }
+      # Tags:
+      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+      #   - { Key: prx:dev:family, Value: Dovetail }
+      #   - { Key: prx:dev:application, Value: Analytics }
   AnalyticsPingbacksFunctionElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
@@ -945,15 +945,15 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${AnalyticsRedisFunction}
       RetentionInDays: 14
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:family, Value: Dovetail }
-        - { Key: prx:dev:application, Value: Analytics }
+      # Tags:
+      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+      #   - { Key: prx:dev:family, Value: Dovetail }
+      #   - { Key: prx:dev:application, Value: Analytics }
   AnalyticsRedisFunctionElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
