--- a/stacks/apps/proxy.yml
+++ b/stacks/apps/proxy.yml
@@ -80,14 +80,14 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${ProxyHttpLambdaFunction}
       RetentionInDays: 60
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: Proxy }
+      # Tags:
+      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+      #   - { Key: prx:dev:application, Value: Proxy }
   ProxyHttpLambdaElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
