--- a/stacks/apps/s3-signing.yml
+++ b/stacks/apps/s3-signing.yml
@@ -78,14 +78,14 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${UploadHttpLambdaFunction}
       RetentionInDays: 60
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: S3 Signing Service }
+      # Tags:
+      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+      #   - { Key: prx:dev:application, Value: S3 Signing Service }
   UploadHttpSigningUser:
     Type: AWS::IAM::User
     Properties:
