--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -539,14 +539,14 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${EventsNotificationsFunction}
       RetentionInDays: 7
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: Common }
+      # Tags:
+      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+      #   - { Key: prx:dev:application, Value: Common }
   EventsNotificationsFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
