--- a/stacks/apps/dovetail-cdn-origin-request.yml
+++ b/stacks/apps/dovetail-cdn-origin-request.yml
@@ -75,12 +75,12 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${OriginRequestFunction}
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:family, Value: Dovetail }
-      #   - { Key: prx:dev:application, Value: CDN Origin Request }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: CDN Origin Request }
