--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -138,15 +138,15 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${CountsFunction}
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:family, Value: Dovetail }
-      #   - { Key: prx:dev:application, Value: Counts }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Counts }
   CountsFunctionElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
