--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -835,15 +835,15 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:family, Value: Dovetail }
-      #   - { Key: prx:dev:application, Value: Feeder }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Feeder }
   WebTaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
@@ -926,15 +926,15 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:family, Value: Dovetail }
-      #   - { Key: prx:dev:application, Value: Feeder }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Feeder }
   WorkerTaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
