--- a/stacks/apps/theworld-search.yml
+++ b/stacks/apps/theworld-search.yml
@@ -182,15 +182,15 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${SearchEndpointFunction}
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:family, Value: The World }
-      #   - { Key: prx:dev:application, Value: Search }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: The World }
+        - { Key: prx:dev:application, Value: Search }
 
   # Creates an association between search.theworld.org and the production
   # API Gateway. This association can be created once per region.
