--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -70,14 +70,14 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${AmazonSesSmtpCredentialsGeneratorFunction}
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:application, Value: Infrastructure }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   AmazonSesSmtpCredentialsGeneratorFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -216,14 +216,14 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${S3StaticSiteDeployFunction}
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:application, Value: Infrastructure }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   S3StaticSiteDeployFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -331,14 +331,14 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${AvailabilityZoneSelectorFunction}
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:application, Value: Infrastructure }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   AvailabilityZoneSelectorFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -419,14 +419,14 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${EchoFunction}
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:application, Value: Infrastructure }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   EchoFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -556,14 +556,14 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${CloudWatchAlarmTaggerFunction}
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:application, Value: Infrastructure }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   CloudWatchAlarmTaggerFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -695,14 +695,14 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${Ec2ResourceTaggerFunction}
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:application, Value: Infrastructure }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   Ec2ResourceTaggerFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -791,14 +791,14 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${HashStringFunction}
       RetentionInDays: 14
-      # Tags:
-      #   - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-      #   - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-      #   - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-      #   - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
-      #   - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
-      #   - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-      #   - { Key: prx:dev:application, Value: Infrastructure }
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   HashStringFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
