Add tags to resource groups

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1069,6 +1069,8 @@ Resources:
         - !GetAtt Constants.CloudFormationNotificationArn
       Parameters:
         RootStackName: !GetAtt Constants.RootStackName
+        RootStackId: !GetAtt Constants.RootStackId
+        EnvironmentType: !Ref EnvironmentType
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
