--- a/stacks/resource-groups.yml
+++ b/stacks/resource-groups.yml
@@ -7,6 +7,8 @@ Description: >-
 
 Parameters:
   RootStackName: { Type: String }
+  RootStackId: { Type: String }
+  EnvironmentType: { Type: String }
 
 Resources:
   StackResourceGroup:
@@ -24,6 +26,14 @@ Resources:
               Values:
                 - !Ref RootStackName
         Type: TAG_FILTERS_1_0
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: DevOps }
   StackEc2IntancesGroup:
     Type: AWS::ResourceGroups::Group
     Properties:
@@ -39,6 +49,14 @@ Resources:
               Values:
                 - !Ref RootStackName
         Type: TAG_FILTERS_1_0
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: DevOps }
   StackAcmCertificateGroup:
     Type: AWS::ResourceGroups::Group
     Properties:
@@ -54,6 +72,14 @@ Resources:
               Values:
                 - !Ref RootStackName
         Type: TAG_FILTERS_1_0
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: DevOps }
   StackLogGroupsGroup:
     Type: AWS::ResourceGroups::Group
     Properties:
@@ -69,6 +95,14 @@ Resources:
               Values:
                 - !Ref RootStackName
         Type: TAG_FILTERS_1_0
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: DevOps }
 
 Outputs:
   StackResourceGroupName:
